# stm32f103_template

./: Cargo.toml
.cargo/: config
src/: main.rs
